# tp-esp-tflite-micro

./: CMakeLists.txt
tensorflow/lite/: array.cc  array.h
tensorflow/lite/core/: macros.h
tensorflow/lite/kernels/internal/: max.h  min.h
tensorflow/lite/micro/: micro_utils.cc
